<resources>
    <string name="app_name">Калькулятор</string>
    <string name="txt_display">0</string>
    <string name="btn_multiply">*</string>
    <string name="btn_minus">-</string>
    <string name="btn_dot">.</string>
    <string name="btn_plus">+</string>
    <string name="btn_result">=</string>
    <string name="btn_div">/</string>
    <string name="btn_c" translatable="false">C</string>
    <string name="btn_settings">Настройки</string>

    <string name="txt_0">0</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>

    <string name="switch_dark_mode">Включена тёмная тема</string>
    <string name="switch_light_mode">Включена светлая тема</string>

</resources>